add frontend to kustomize

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -4,4 +4,6 @@ kind: Kustomization
 resources:
 - flight-deployment.yaml
 - flight-service.yaml
+- frontend-deployment.yaml
+- frontend-service.yaml
 
