--- a/argo-application.yaml
+++ b/argo-application.yaml
@@ -17,5 +17,7 @@ spec:
     server: 'https://kubernetes.default.svc'
     namespace: dnaprawa
   syncPolicy:
+    automated:
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
