add argo auto sync

--- a/argo-application.yaml
+++ b/argo-application.yaml
@@ -19,5 +19,7 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+      prune: true
+      allowEmpty: true
     syncOptions:
       - CreateNamespace=true
